--- a/GreenMonkeysMVC/Views/Shared/_Layout.cshtml
+++ b/GreenMonkeysMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="">Employees</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="">Departments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Computers" asp-action="">Computers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TrainingPrograms" asp-action="">TrainingPrograms</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +46,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - GreenMonkeysMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -45,4 +56,4 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
-</html>
+</html> 
