--- a/GreenMonkeysMVC/Views/TrainingPrograms/Edit.cshtml
+++ b/GreenMonkeysMVC/Views/TrainingPrograms/Edit.cshtml
@@ -10,9 +10,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form ifFuture(StartDate) asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input asp-for="Id" class="form-control" type="hidden" />
+            <input asp-for="Id" class="form-control" type="hidden" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -47,3 +47,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
