ticket 5 should be doneington

--- a/GreenMonkeysMVC/Views/Departments/Index.cshtml
+++ b/GreenMonkeysMVC/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GreenMonkeysMVC.Models.ViewModels.DepartmentViewModel>
+﻿@model IEnumerable<GreenMonkeysMVC.Models.Department>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,13 +13,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Department.Id)
+                @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Department.Name)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Department.Budget)
+                @Html.DisplayNameFor(model => model.Budget)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeCount)
             </th>
             <th></th>
         </tr>
@@ -28,16 +31,16 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Department.Id)
+                @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Department.Name)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Department.Budget)
+                @Html.DisplayFor(modelItem => item.Budget)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Employees.Count)
+                @Html.DisplayFor(modelItem => item.EmployeeCount)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
