Delete is working and created method for it

--- a/GreenMonkeysMVC/Views/TrainingPrograms/Details.cshtml
+++ b/GreenMonkeysMVC/Views/TrainingPrograms/Details.cshtml
@@ -63,9 +63,10 @@
 
 @if (Model.TrainingProgram.StartDate > DateTime.Now)
 {
-    <div>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.TrainingProgram.Id }) |
-    </div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TrainingProgram.Id }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.TrainingProgram.Id }) |
+</div>
 }
 <div>
     <a asp-action="Index">Back to List</a>
