--- a/GreenMonkeysMVC/Views/Computers/Index.cshtml
+++ b/GreenMonkeysMVC/Views/Computers/Index.cshtml
@@ -16,12 +16,6 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PurchaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DecomissionDate)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Make)
             </th>
             <th>
@@ -37,21 +31,13 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PurchaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DecomissionDate)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Make)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Model)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {id=item.Id}) |
-                @Html.ActionLink("Details", "Details", new {id=item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {id=item.Id})
+                @Html.ActionLink("Details", "Details", new { id = item.Id })
             </td>
         </tr>
 }
