hid decomission date if null

--- a/GreenMonkeysMVC/Views/Computers/Details.cshtml
+++ b/GreenMonkeysMVC/Views/Computers/Details.cshtml
@@ -22,12 +22,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PurchaseDate)
         </dd>
+
+        @if (Model.DecomissionDate != null)
+        {
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DecomissionDate)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DecomissionDate)
         </dd>
+        }
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Make)
         </dt>
