--- a/GreenMonkeysMVC/Views/Computers/Details.cshtml
+++ b/GreenMonkeysMVC/Views/Computers/Details.cshtml
@@ -48,7 +48,11 @@
     </dl>
 </div>
 <div>
+   
     <td>
-        @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = Model.Id })
+    
+    |
     </td>    <a asp-action="Index">Back to List</a>
+    
 </div>
