--- a/GreenMonkeysMVC/Views/TrainingPrograms/PastIndex.cshtml
+++ b/GreenMonkeysMVC/Views/TrainingPrograms/PastIndex.cshtml
@@ -48,10 +48,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MaxAttendees)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            <td>                
+                @Html.ActionLink("Details", "Details", new {  id=item.Id }) 
             </td>
         </tr>
 }
