close to done, getting everything but a list of employees

--- a/GreenMonkeysMVC/Views/Departments/Details.cshtml
+++ b/GreenMonkeysMVC/Views/Departments/Details.cshtml
@@ -10,30 +10,38 @@
     <h4>Department</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Budget)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Budget)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmployeeCount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmployeeCount)
+
+
+        
+        @foreach (var item in Model.Employees)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => item.FirstName)
+            </dt>
+             <dd class="col-sm-10">
+            @Html.DisplayFor(model => item.FirstName)
         </dd>
+        }
     </dl>
 </div>
 <div>
