--- a/GreenMonkeysMVC/Views/Employees/Index.cshtml
+++ b/GreenMonkeysMVC/Views/Employees/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Department.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+               @* @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |*@
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             </td>
         </tr>
