--- a/GreenMonkeysMVC/Views/Departments/Details.cshtml
+++ b/GreenMonkeysMVC/Views/Departments/Details.cshtml
@@ -32,15 +32,14 @@
         </dd>
 
 
-        
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Employees)
+        </dt>
         @foreach (var item in Model.Employees)
         {
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => item.FirstName)
-            </dt>
-             <dd class="col-sm-10">
-            @Html.DisplayFor(model => item.FirstName)
-        </dd>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => item.FirstName)
+            </dd>
         }
     </dl>
 </div>
