--- a/GreenMonkeysMVC/Views/Computers/Index.cshtml
+++ b/GreenMonkeysMVC/Views/Computers/Index.cshtml
@@ -14,7 +14,7 @@
 </form>
 
 <p>
-    <a asp-action="Create">Create A New Computer</a>
+    <a asp-action="Create">Create New Computer</a>
 </p>
 <table class="table">
     <thead>
