--- a/GreenMonkeysMVC/Views/Employees/Index.cshtml
+++ b/GreenMonkeysMVC/Views/Employees/Index.cshtml
@@ -2,10 +2,10 @@
 
 @{ ViewData["Title"] = "Index"; }
 
-<h1>Index</h1>
+<h1>Employees</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Employee</a>
 </p>
 <table class="table">
     <thead>
