--- a/GreenMonkeysMVC/Views/TrainingPrograms/PastIndex.cshtml
+++ b/GreenMonkeysMVC/Views/TrainingPrograms/PastIndex.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GreenMonkeysMVC.Models.TrainingProgram>
 
 @{
-    ViewData["Title"] = "Past Training Programs";
+    ViewData["Title"] = " Past Training Programs";
 }
 
-<h1>PastIndex</h1>
+<h1>Past Training Programs</h1>
 
 
 <table class="table">
