--- a/GreenMonkeysMVC/Views/TrainingPrograms/Index.cshtml
+++ b/GreenMonkeysMVC/Views/TrainingPrograms/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Training Programs";
 }
 
-<h1>Index</h1>
+<h1>Training Programs</h1>
 
 <p>
     <a asp-action="Create">Create New Training Program</a>
